# llm-test-gen

./: LICENSE  README.md  metrics.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/design/: requirements.md
examples/src_project/: example_module.py
scripts/: evaluate_repo.sh
src/llm_testgen/: ast_extract.py  cli.py  evaluator.py  generator.py  guardrails.py  llm_provider.py  prompts.py
src/llm_testgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_cli_smoke.py
tests_gen/: test_example_module.py
tests_robot/: test_example_module.robot
